--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,6 +4,7 @@ environment {
         tenancy_ocid     = credentials('TENANCY_OCID')
         user_ocid        = credentials('USER_OCID')
         fingerprint      = credentials('FINGERPRINT')
+        private_key      = credentials('PRIVATE_KEY')
     }
     
   }
