--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,10 @@
 pipeline {
-    agent any
+ parameters {
+        string(name: 'environment', defaultValue: 'terraform', description: 'Workspace/environment file to use for deployment')
+        
+  
+    }
+    
 environment {
         tenancy_ocid     = credentials('TENANCY_OCID')
         user_ocid        = credentials('USER_OCID')
@@ -7,12 +12,14 @@ environment {
         private_key      = credentials('PRIVATE_KEY')
     }
     
-  
+  agent any
     stages {
         stage('Init') {
             steps {
-                echo 'Building..'
-                sh "terraform init -input=false"
+                echo 'Initializing..'
+                sh 'pwd;cd terraform/Terraform-VCN ; terraform init -input=false'
+                sh 'pwd;cd terraform/Terraform-VCN ; terraform workspace new ${environment}'
+                sh 'pwd;cd terraform/Terraform-VCN ; terraform workspace select ${environment}'
             }
         }
         stage('Plan') {
