--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,8 +16,10 @@ environment {
         stage('Init') {
             steps {
                 echo 'Initializing..'
+                script {
                 def tfHome = tool name: ‘Terraform’
                 env.PATH = “${tfHome}:${env.PATH}”
+                }
                 sh 'terraform init -input=false'
                 sh 'terraform workspace select ${environment}'
             }
