--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,10 +16,9 @@ environment {
         stage('Init') {
             steps {
                 echo 'Initializing..'
-                script {
-                def tfHome = tool name: ‘Terraform’
+                def tfHome = tool name: 'Terraform',type: 'com.cloudbees.jenkins.plugins.customtools.CustomTool'
                 env.PATH = “${tfHome}:${env.PATH}”
-                }
+             
                 sh 'terraform init -input=false'
                 sh 'terraform workspace select ${environment}'
             }
