--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,6 +5,9 @@ pipeline {
     }
     
 environment {
+        def tfHome = tool name: 'Terraform',type: 'com.cloudbees.jenkins.plugins.customtools.CustomTool'
+        echo '${tfHome}'
+        PATH = “${PATH}:${tfHome}”
         tenancy_ocid     = credentials('TENANCY_OCID')
         user_ocid        = credentials('USER_OCID')
         fingerprint      = credentials('FINGERPRINT')
@@ -16,8 +19,7 @@ environment {
         stage('Init') {
             steps {
                 echo 'Initializing..'
-                def tfHome = tool name: 'Terraform',type: 'com.cloudbees.jenkins.plugins.customtools.CustomTool'
-                env.PATH = “${tfHome}:${env.PATH}”
+               
              
                 sh 'terraform init -input=false'
                 sh 'terraform workspace select ${environment}'
