--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,11 +1,10 @@
 pipeline {
+agent any
  parameters {
-        string(name: 'environment', defaultValue: 'terraform', description: 'Workspace/environment file to use for deployment') 
-  
+        string(name: 'environment', defaultValue: 'terraform', description: 'Workspace/environment file to use for deployment')
     }
-    
 environment {
-        def tfHome = tool name: 'Terraform',type: 'com.cloudbees.jenkins.plugins.customtools.CustomTool'
+        def tfHome = tool name:'Terraform',type:'org.jenkinsci.plugins.terraform.TerraformInstallation'
         echo '${tfHome}'
         PATH = “${PATH}:${tfHome}”
         tenancy_ocid     = credentials('TENANCY_OCID')
@@ -13,14 +12,10 @@ environment {
         fingerprint      = credentials('FINGERPRINT')
         private_key      = credentials('PRIVATE_KEY')
     }
-    
-  agent any
     stages {
         stage('Init') {
             steps {
-                echo 'Initializing..'
-               
-             
+                echo 'Initializing..            
                 sh 'terraform init -input=false'
                 sh 'terraform workspace select ${environment}'
             }
