--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,6 +9,19 @@ environment {
         fingerprint      = credentials('FINGERPRINT')
         private_key      = credentials('PRIVATE_KEY')
     }
+    stage('Download') {
+        // Download Terraform
+        sh label: '', script: 'curl https://releases.hashicorp.com/terraform/0.14.6/terraform_0.14.6_linux_amd64.zip \
+            --output terraform_0.14.6_linux_amd64.zip \
+             && unzip terraform_0.14.6_linux_amd64.zip'
+    }
+    stage('Backend-Init') {
+        // Initialize the Terraform configuration
+        dir('03_01_remotestate/remote_resources') {
+            sh script: '../../terraform init -input=false'
+        }
+        
+    }
     stages {
         stage('Init') {
             steps {
