--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,17 +8,20 @@ environment {
     }
      stages {
     stage('Download') {
+    steps{
         // Download Terraform
         sh label: '', script: 'curl https://releases.hashicorp.com/terraform/0.14.6/terraform_0.14.6_linux_amd64.zip \
             --output terraform_0.14.6_linux_amd64.zip \
              && unzip terraform_0.14.6_linux_amd64.zip'
     }
+    }
     stage('Backend-Init') {
+    steps {
         // Initialize the Terraform configuration
         dir('03_01_remotestate/remote_resources') {
             sh script: '../../terraform init -input=false'
         }
-        
+        }
     }
    
         stage('Plan') {
