--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,26 +1,19 @@
 pipeline {
 agent any
 environment {
-               tenancy_ocid     = credentials('TENANCY_OCID')
+       tenancy_ocid     = credentials('TENANCY_OCID')
         user_ocid        = credentials('USER_OCID')
         fingerprint      = credentials('FINGERPRINT')
         private_key      = credentials('PRIVATE_KEY')
+        PATH = "${PATH}:${getTerraformPath()}
     }
      stages {
-    stage('Download') {
-    steps{
-        // Download Terraform
-        sh label: '', script: 'curl https://releases.hashicorp.com/terraform/0.14.6/terraform_0.14.6_linux_amd64.zip \
-            --output terraform_0.14.6_linux_amd64.zip \
-             && unzip terraform_0.14.6_linux_amd64.zip'
-    }
-    }
+    
     stage('Backend-Init') {
     steps {
-        // Initialize the Terraform configuration
-        dir('03_01_remotestate/remote_resources') {
-            sh script: '../../terraform init -input=false'
-        }
+        
+                sh "terraform init"
+      
         }
     }
    
@@ -35,4 +28,7 @@ environment {
             }
         }
     }
+    def getTerraformPath(){
+  def tfHome = tool name: 'Terraform', type: 'org.jenkinsci.plugins.terraform.TerraformInstallation'
+  return tfHome
 }
